--- a/templates/booking.html
+++ b/templates/booking.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Booking Request</h2>
-<form method="POST" action="/booking">
+<h2>Request to Book</h2>
+<form action="/booking" method="post">
     <label>Name:</label><input type="text" name="name" required><br>
     <label>Email:</label><input type="email" name="email" required><br>
     <label>Phone:</label><input type="text" name="phone"><br>
-    <label>Check-in:</label><input type="date" name="checkin" required><br>
-    <label>Check-out:</label><input type="date" name="checkout" required><br>
-    <label>Guests:</label><input type="number" name="guests" required><br>
+    <label>Check-in:</label><input type="date" name="check_in_date" required><br>
+    <label>Check-out:</label><input type="date" name="check_out_date" required><br>
+    <label>Guests:</label><input type="number" name="number_of_guests" required><br>
     <button type="submit">Submit Request</button>
 </form>
 {% endblock %}
+
