--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Our Short-Term Rental</h1>
-        <nav>
-            <a href="/">Home</a>
-            <a href="/gallery">Gallery</a>
-            <a href="/booking">Booking</a> 
-        </nav>
+        <h1>Welcome to Pocono Country Lake House</h1>
     </header>
     <main>
         {% block content %}{% endblock %}
